added footer, home page content

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="content">
         <marquee behavior="slide" direction="up">
-            <h3>Get to Know: </h3>
+            <h3>Get to Know:- </h3>
             <h5>1. What is Cyber Security</h5>
             <h5>2. Threats and Vulnerabilities</h5>
             <h5>3. Various hacking techniques and how security Can be compromised</h5>
