added social icons

--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
                     <li><a href="#">News</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Login</a></li>
-
                     <!-- <a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i></a> -->
                 </ul>
-                
             </nav>
+
+                <button class="btn1">Login /<br> Sign up</button>
+
         </div>
     </div>
-
-    <div class="introduction">
+    <!-- <div class="introduction">
         <marquee behavior="slide" direction="down">
             <h1>Interested to Know about Cyber Security...? <br> here's the place ! ! ! </h1>
 
@@ -44,10 +43,14 @@
             <h5>3. Various hacking techniques and how security Can be compromised</h5>
             <h5>4. How to Protect yourself in the Digital World</h5>
         </marquee>
-    </div>
+    </div> -->
 
 <div class="copyright">
     <p><i class="fa-regular fa-copyright"></i>Copyright <i class="fa-solid fa-heart"></i></p>
+    <p><a href=""><i class="fa-brands fa-whatsapp"></i></a>+254 113441490</p>
+    <p><a href=""><i class="fa-brands fa-twitter"></i></a>cyberguardain_360</p>
+    <p><a href=""><i class="fa-brands fa-linkedin"></i></a>cyberg_360</p>
+    <p><a href=""><i class="fa-regular fa-paper-plane"></i></a>info@cyberguardain360.ac.ke</p>
 </div>
     
 </body>
