reviewed the code

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <button class="btn1">Login /<br> Sign up</button>
         </div>
     </div>
+
+   
     <!-- <div class="introduction">
         <marquee behavior="slide" direction="down">
             <h1>Interested to Know about Cyber Security...? <br> here's the place ! ! ! </h1>
@@ -45,11 +47,11 @@
     </div> -->
 
 <div class="copyright">
-    <p><i class="fa-regular fa-copyright"></i>Copyright <i class="fa-solid fa-heart"></i></p>
-    <p><a href=""><i class="fa-brands fa-whatsapp"></i></a>+254 113441490</p>
-    <p><a href=""><i class="fa-brands fa-twitter"></i></a>cyberguardain_360</p>
-    <p><a href=""><i class="fa-brands fa-linkedin"></i></a>cyberg_360</p>
-    <p><a href=""><i class="fa-regular fa-paper-plane"></i></a>info@cyberguardain360.ac.ke</p>
+    <p><i class="fa-regular fa-copyright"></i> Copyright <i class="fa-solid fa-heart"></i></p>
+    <p><a href=""><i class="fa-brands fa-whatsapp"></i></a> +254 113441490</p>
+    <p><a href=""><i class="fa-brands fa-twitter"></i></a> cyberguardian_360</p>
+    <p><a href=""><i class="fa-brands fa-linkedin"></i></a> cyberguardian_360</p>
+    <p><a href=""><i class="fa-regular fa-paper-plane"></i></a> cyberguardian_360@gmail.com</p>
 </div>
     
 </body>
