--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Learn</a></li>
                     <li><a href="#">News</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <!-- <a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i></a> -->
                 </ul>
@@ -28,23 +28,7 @@
     </div>
 
    
-    <!-- <div class="introduction">
-        <marquee behavior="slide" direction="down">
-            <h1>Interested to Know about Cyber Security...? <br> here's the place ! ! ! </h1>
-
-        </marquee>
-
-            <hr id="new1">
-    </div>
-    <div class="content">
-        <marquee behavior="slide" direction="up">
-            <h3>Get to Know:- </h3>
-            <h5>1. What is Cyber Security</h5>
-            <h5>2. Threats and Vulnerabilities</h5>
-            <h5>3. Various hacking techniques and how security Can be compromised</h5>
-            <h5>4. How to Protect yourself in the Digital World</h5>
-        </marquee>
-    </div> -->
+    
 
 <div class="copyright">
     <p><i class="fa-regular fa-copyright"></i> Copyright <i class="fa-solid fa-heart"></i></p>
